<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/imageEqpt"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/imagemEspecie" />

    <LinearLayout
        android:id="@+id/secaoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageEqpt"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableBottom="@color/colorPrimaryDark"
            android:text="@string/nomePopular"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nomeCientifico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nomeCientifico"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/utilizacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/descricao"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/secaoCientifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secaoInfo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/familia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/familia"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/secaoCien"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/familia"
            android:text="@string/genero"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="UnknownId" />
    </RelativeLayout>

</RelativeLayout>