<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/imageEqpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imagemEspecie" />

        <LinearLayout
            android:id="@+id/secaoInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageEqpt"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableBottom="@color/colorPrimaryDark"
                android:text="@string/nomePopular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nomeCientifico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nomeCientifico"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/utilizacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:text="@string/descricao"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/secaoCientifica"
            android:layout_width="match_parent"
            android:layout_height="331dp"
            android:layout_below="@+id/secaoInfo"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/medirRegua"
                android:inputType="numberDecimal|numberSigned"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/familia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/familia"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/secaoCien"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/familia"
                android:text="@string/genero"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="UnknownId" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/genero"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="120dp"
                android:text="@string/Medir2" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="120dp"
                android:text="Confirmar" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>