<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/borda">

    <ImageView
        android:id="@+id/imageEqpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagemEspecie" />

    <LinearLayout
        android:id="@+id/secaoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageEqpt"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableBottom="@color/colorPrimaryDark"
            android:text="@string/nomePopular"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nomeCientifico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nomeCientifico"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/secaoCientifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secaoInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/familia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/familia"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/secaoCien"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/familia"
            android:text="@string/genero"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="UnknownId" />
    </RelativeLayout>

</RelativeLayout>