<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/imageEqpt"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/imagemEspecie" />

    <LinearLayout
        android:id="@+id/secaoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageEqpt"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nome"
            android:background="#CC0033"
            android:textColor="#ffffff"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/utilizacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/utilizacao"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/secaoCientifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secaoInfo"
        android:orientation="vertical"/>

</RelativeLayout>