<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnMedir"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/cor2"
        android:text="@string/medir"
        android:textColor="@color/Branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/btnLista"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/cor2"
        android:text="@string/listaEspecies"
        android:textColor="@color/Branco"
        app:layout_constraintEnd_toEndOf="@+id/btnMedir"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnMedir"
        app:layout_constraintTop_toBottomOf="@+id/btnMedir" />

    <Button
        android:id="@+id/btnEquipamentos"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/cor2"
        android:text="@string/equipamentosPermitidos"
        android:textColor="@color/Branco"
        app:layout_constraintEnd_toEndOf="@+id/btnLista"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLista"
        app:layout_constraintTop_toBottomOf="@+id/btnLista" />

</android.support.constraint.ConstraintLayout>